# llm-annotation

./: .dockerignore  .env-example  .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  inicializacao-dockler.txt
docs/: GUIA_DATASETS.md  INDICE.md  INSTRUCOES.md  PARALELISMO.md  QUICKSTART.md  README.md  RELATORIO_EXPERIMENTOS.md  RESUMO_EXECUTIVO.md  framework-proximos passos.txt  paralelismo.html  pipeline.html
scripts/: debug_text_id_mismatch.py
src/: main.py  main_huggingface.py  run_annotation.py  run_consensus.py  run_fine_tunning.py  run_instance_selection.py  run_perspectivism.py
src/api/: api_examples.py  server.py
src/api/core/: cancellation.py  config.py  state.py
src/api/examples/: base_experiment.json  base_experiment_local.json  base_experiment_vm.json
src/api/routes/: datasets.py  experiments.py  fine_tuning.py  health.py
src/api/schemas/: annotation.py  cache_config.py  dataset.py  dataset_config.py  experiment.py  results.py
src/api/services/: experiment_runner.py  fine_tuning_runner.py  prompt_factory.py
src/config/: conflict_resolution.py  dataset_config.py  datasets.py  datasets_collected.py  datasets_config.py  evaluation.py  evaluation_metrics.py  experiment.py  instance_selection.py  llms.py  prompts.py
src/experiments/: base_experiment.py  base_experiment_vm.json  docker_experiment.json  experiment_with_qwen3.json  large_experiment.json  time_experiment_local.json
src/extra/: parallelization.py
src/fine_tune_system/: pipeline.py
src/fine_tune_system/core/: hf_tokenizer.py  model_factory.py  tokenizer.py
src/fine_tune_system/fine_tune/: fine_tune_factory.py  fine_tuner.py  supervised_fine_tuner.py
src/fine_tune_system/training/: cross_validator.py  label_schema.py  metrics.py  splits_aligner.py  trainer_builder.py
src/infrastructure/: config_credentials_env.py  utils.py
src/infrastructure/environment_variables/: .env-example  handler_adapter.py
src/instance_selection_system/: pipeline.py
src/instance_selection_system/filtering/: annotation_filter.py
src/instance_selection_system/selection/: biois.py  selector_factory.py
src/is_system/: pipeline.py
src/is_system/core/: base.py  text_vectorizer.py
src/is_system/filtering/: annotation_filter.py
src/is_system/selection/: biois.py  selector_factory.py
src/llm_annotation_system/: __init__.py  consensus_analyzer.py  llm_annotator.py  pipeline.py  visualizer.py
src/llm_annotation_system/annotation/: annotation_engine.py  execution_estrategy.py  llm_annotator.py  llm_provider.py
src/notebooks/: analise_alternative_params.ipynb  analise_consenso_llms.ipynb  analise_consenso_llms_extra.ipynb  analise_instance_selection.ipynb  annotation_llms.ipynb  run_fine_tuning.ipynb  validando_labels.ipynb
src/utils/: chatOllamaLogProbs.py  compute_bbs.py  data_loader.py  dataset_aligner.py  evaluate_model_metrics.py  get_latest_results_date.py  get_text_id_from_text.py
(+36 files in other folders)
