[tool.poetry]
name = "llm-annotation"
version = "1.0.0"
description = "Sistema de anotação automática de datasets usando múltiplas LLMs com análise de consenso"
authors = ["Gabriel Catizani <gabrielcatizani01@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Ktzani/llm-annotation"
repository = "https://github.com/Ktzani/llm-annotation"
keywords = ["llm", "annotation", "nlp", "machine-learning", "consensus"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies
pandas = "^2.0.0"
numpy = "^1.24.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"

# LLM APIs
openai = "^1.0.0"
anthropic = "^0.18.0"
google-generativeai = "^0.3.0"
cohere = {version = "^4.37", optional = true}

# Utilities
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
pydantic = "^2.0.0"

# Jupyter
jupyter = "^1.0.0"
ipywidgets = "^8.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"

# Code quality
pylint = "^2.17.0"